Adicionando popup consentimento LGPD

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
   
   <!-- CSS principal -->
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+
+  {% include iubenda.html %}
 </head>
 <body>
   <!-- Inclui o Google Tag Manager -->
