--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap" rel="stylesheet">
   
+  {% include gtm-head.html %}
+
   <!-- CSS principal -->
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
